--- a/template.yaml
+++ b/template.yaml
@@ -396,6 +396,10 @@ Resources:
           Value: https://github.com/aws-samples/ec2-former2
           
 Outputs:
+  EC2Instance:
+    Description: EC2 instance console
+    Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/ec2/home?region=${AWS::Region}#Instances:search=${ec2Instance}"
+    
   SSMsessionManager:
     Description: SSM Session Manager login ("sudo passwd ec2-user" to change password)
     Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${ec2Instance}"
