--- a/template.yaml
+++ b/template.yaml
@@ -22,28 +22,38 @@ Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: EC2 configuration
-        Parameters:
-          - ec2Name
-          - vpcID
-          - subnetID
-          - ingressIPv4
-          - ingressIPv6
-          - assignStaticIP
-      - Label:
-          default: Amazon Linux 2 configuration
+          default: EC2
         Parameters:
           - instanceType
-          - amazonLinux2amd64
+          - ec2Name
+      - Label:
+          default: Network
+        Parameters:
+          - vpcID
+          - subnetID
+          - assignStaticIP
+          - displayPublicIP
+      - Label:
+          default: NICE DCV
+        Parameters:
+          - ingressIPv4
+          - ingressIPv6
+          - listenPort
 
 Conditions:
   useElasticIP: !Equals [!Ref assignStaticIP, "Yes"]
+  displayPublicIP: !Equals [!Ref displayPublicIP, "Yes"]
 
 Parameters:
+  instanceType:
+    Type: String
+    Description: Instance Type ( https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html )
+    Default: t3.medium
   ec2Name:
     Description: EC2 instance name
     Type: String
     Default: Amazon Linux with former2 at http://localhost
+
   vpcID:
     Type: AWS::EC2::VPC::Id
     Description: VPC with internet connectivity
@@ -54,6 +64,21 @@ Parameters:
     Description: Subnet with internet connectivity
     ConstraintDescription: Do specify a valid value
     AllowedPattern: ".+"
+  assignStaticIP:
+    Type: String
+    Description: Assign static IPv4 address ( https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html )
+    AllowedValues:
+      - "Yes"
+      - "No"
+    Default: "No"
+  displayPublicIP:
+    Type: String
+    Description: Display EC2 public IP in CloudFormation Outputs (select No if EC2 has no public IP)
+    AllowedValues:
+      - "Yes"
+      - "No"
+    Default: "Yes"
+
   ingressIPv4:
     Type: String
     Description: Allowed source IP prefix (e.g. 1.2.3.4/32, get your source IP from https://checkip.amazonaws.com )
@@ -62,22 +87,14 @@ Parameters:
     Type: String
     Description: Allowed source IPv6 prefix
     Default: ::/0
-  assignStaticIP:
-    Type: String
-    Description: Assign static IPv4 address ( https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html )
-    AllowedValues:
-      - "Yes"
-      - "No"
-    Default: "No"
 
-  instanceType:
-    Type: String
-    Description: Instance Type ( https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html )
-    Default: t3.medium
-  amazonLinux2amd64:
-    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Description: Amazon Linux 2 (x86_64) AMI
-    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
+  listenPort:
+    Type: Number
+    Description: NICE DCV server TCP/UDP port
+    ConstraintDescription: Specify a value between 1024 and 65535
+    MinValue: 1024
+    MaxValue: 65535
+    Default: 8443
 
 Resources:
   securityGroup:
@@ -88,23 +105,23 @@ Resources:
       SecurityGroupIngress:
         - Description: NICE DCV (IPv4)
           IpProtocol: "tcp"
-          FromPort: 8443
-          ToPort: 8443
+          FromPort: !Ref listenPort
+          ToPort: !Ref listenPort
           CidrIp: !Ref ingressIPv4
         - Description: NICE DCV QUIC (IPv4)
           IpProtocol: "udp"
-          FromPort: 8443
-          ToPort: 8443
+          FromPort: !Ref listenPort
+          ToPort: !Ref listenPort
           CidrIp: !Ref ingressIPv4
         - Description: NICE DCV (IPv6)
           IpProtocol: "tcp"
-          FromPort: 8443
-          ToPort: 8443
+          FromPort: !Ref listenPort
+          ToPort: !Ref listenPort
           CidrIpv6: !Ref ingressIPv6
         - Description: NICE DCV QUIC (IPv6)
           IpProtocol: "udp"
-          FromPort: 8443
-          ToPort: 8443
+          FromPort: !Ref listenPort
+          ToPort: !Ref listenPort
           CidrIpv6: !Ref ingressIPv6
       SecurityGroupEgress:
         - Description: Allow all outbound traffic (IPv4)
@@ -207,7 +224,7 @@ Resources:
               owner: "ec2-user"
               group: "users"
     Properties:
-      ImageId: !Ref amazonLinux2amd64
+      ImageId: "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-kernel-5.10-hvm-x86_64-gp2}}"
       InstanceType: !Ref instanceType
       IamInstanceProfile: !Ref instanceProfile
       SubnetId: !Ref subnetID
@@ -237,15 +254,61 @@ Resources:
           yum install -q -y gnome-terminal gnu-free-fonts-common gnu-free-mono-fonts gnu-free-sans-fonts gnu-free-serif-fonts            
           yum install -q -y pulseaudio pulseaudio-utils
 
-          # https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-server.html
+          # NICE DCV: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-server.html
           rpm --import https://d1uj6qtbmh3dt5.cloudfront.net/NICE-GPG-KEY
 
-          # https://docs.aws.amazon.com/dcv/latest/userguide/client-linux.html
           wget -nv https://d1uj6qtbmh3dt5.cloudfront.net/nice-dcv-el7-x86_64.tgz
           tar -xvzf nice-dcv-el7-x86_64.tgz && cd nice-dcv-*-el7-x86_64
           yum install -q -y nice-dcv-server-*.rpm
           yum install -q -y nice-dcv-web-viewer-*.rpm
           yum install -q -y nice-xdcv-*.rpm
+
+          # Listen port: https://docs.aws.amazon.com/dcv/latest/adminguide/manage-port-addr.html
+          sed -i "/^web-port=/d" /etc/dcv/dcv.conf
+          sed -i "/^quic-port=/d" /etc/dcv/dcv.conf
+          sed -i "/^\[connectivity\]/a web-port=${listenPort}" /etc/dcv/dcv.conf
+          sed -i "/^\[connectivity\]/a quic-port=${listenPort}" /etc/dcv/dcv.conf
+
+          # https://docs.aws.amazon.com/dcv/latest/adminguide/enable-quic.html
+          cp /etc/dcv/dcv.conf /etc/dcv/dcv.conf.org
+          sed -i '/^\[connectivity/a enable-quic-frontend=true' /etc/dcv/dcv.conf
+
+          # Virtual session daemon: https://docs.aws.amazon.com/dcv/latest/adminguide/managing-sessions-start.html#managing-sessions-start-manual
+          cat << EoF > /etc/systemd/system/dcv-virtual-session.service
+          [Unit]
+          Description=Create DCV virtual session for user ec2-user
+          After=default.target network.target 
+
+          [Service]
+          ExecStart=/opt/dcv-virtual-session.sh 
+
+          [Install]
+          WantedBy=default.target
+          EoF
+
+          cat << EoF > /opt/dcv-virtual-session.sh
+          #!/bin/bash
+          dcvUser=ec2-user
+          while true;
+          do
+            if (/usr/bin/dcv list-sessions | grep \$dcvUser 1>/dev/null); then
+              sleep 5
+            else
+              /usr/bin/dcv create-session \$dcvUser --owner \$dcvUser --storage-root /home/\$dcvUser
+              /usr/bin/dcv list-sessions
+            fi
+          done
+          EoF
+          chmod +x /opt/dcv-virtual-session.sh
+          chmod og-w /opt/dcv-virtual-session.sh
+
+          cd /root/
+          # AWS CLI v2: https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html
+          yum remove awscli -y
+          curl -s https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip
+          unzip -q -o awscliv2.zip
+          ./aws/install -b /usr/bin
+          echo "export AWS_CLI_AUTO_PROMPT=on-partial" >> /home/ec2-user/.bashrc
 
           # Firefox
           amazon-linux-extras install -y firefox
@@ -291,39 +354,6 @@ Resources:
           mv html html.bak
           mv former2 html
           systemctl enable --now httpd
-
-          # https://docs.aws.amazon.com/dcv/latest/adminguide/enable-quic.html
-          cp /etc/dcv/dcv.conf /etc/dcv/dcv.conf.org
-          sed -i '/^\[connectivity/a enable-quic-frontend=true' /etc/dcv/dcv.conf
-
-          # https://docs.aws.amazon.com/dcv/latest/adminguide/managing-sessions-start.html#managing-sessions-start-manual
-          cat << EoF > /etc/systemd/system/dcv-virtual-session.service
-          [Unit]
-          Description=Create DCV virtual session for user ec2-user
-          After=default.target network.target 
-
-          [Service]
-          ExecStart=/opt/dcv-virtual-session.sh 
-
-          [Install]
-          WantedBy=default.target
-          EoF
-
-          cat << EoF > /opt/dcv-virtual-session.sh
-          #!/bin/bash
-          dcvUser=ec2-user
-          while true;
-          do
-            if (/usr/bin/dcv list-sessions | grep \$dcvUser 1>/dev/null); then
-              sleep 5
-            else
-              /usr/bin/dcv create-session \$dcvUser --owner \$dcvUser --storage-root /home/\$dcvUser
-              /usr/bin/dcv list-sessions
-            fi
-          done
-          EoF
-          chmod +x /opt/dcv-virtual-session.sh
-          chmod og-w /opt/dcv-virtual-session.sh
 
           cat << EoF > /var/www/THIRD_PARTY_LICENSES
           ** Former2; version 1.0 -- https://github.com/iann0036/former2
@@ -372,15 +402,7 @@ Resources:
           SOFTWARE.
           EoF
 
-          cd /root/
-          # https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html            
-          yum remove awscli -y
-          curl -s https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip
-          unzip -q -o awscliv2.zip
-          ./aws/install -b /usr/bin
-          echo "export AWS_CLI_AUTO_PROMPT=on-partial" >> /home/ec2-user/.bashrc
-
-          # yum-cron            
+          # yum-cron
           yum install -q -y yum-cron
           sed -i 's/apply_updates = no/apply_updates = yes/g' /etc/yum/yum-cron.conf
           systemctl enable --now yum-cron
@@ -428,6 +450,13 @@ Outputs:
     Description: SSM Session Manager login ("sudo passwd ec2-user" to change password)
     Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${ec2Instance}"
 
-  RemoteWebConsole:
-    Description: Remote web console (login as ec2-user)
-    Value: !Sub "https://${ec2Instance.PublicIp}:8443"
+  DCVwebConsole:
+    Description: NICE DCV web browser client (login as ec2-user)
+    Value: !Sub
+      - "https://${IpAddress}:${listenPort}"
+      - IpAddress:
+          !If [
+            displayPublicIP,
+            !GetAtt ec2Instance.PublicIp,
+            !GetAtt ec2Instance.PrivateIp,
+          ]
