--- a/AmazonLinux2-former2.yaml
+++ b/AmazonLinux2-former2.yaml
@@ -252,22 +252,22 @@ Resources:
             ToPort: 22
             CidrIpv6: !FindInMap [EICprefixMap, !Ref AWS::Region, Ipv6Prefix]
           - !Ref AWS::NoValue
-        - Description: NICE DCV (IPv4)
+        - Description: DCV (IPv4)
           IpProtocol: tcp
           FromPort: 8443
           ToPort: 8443
           CidrIp: !Ref ingressIPv4
-        - Description: NICE DCV QUIC (IPv4)
+        - Description: DCV QUIC (IPv4)
           IpProtocol: udp
           FromPort: 8443
           ToPort: 8443
           CidrIp: !Ref ingressIPv4
-        - Description: NICE DCV (IPv6)
+        - Description: DCV (IPv6)
           IpProtocol: tcp
           FromPort: 8443
           ToPort: 8443
           CidrIpv6: !Ref ingressIPv6
-        - Description: NICE DCV QUIC (IPv6)
+        - Description: DCV QUIC (IPv6)
           IpProtocol: udp
           FromPort: 8443
           ToPort: 8443
@@ -546,7 +546,7 @@ Resources:
                 mkdir -p /tmp/cfn
                 cd /tmp/cfn
 
-                # NICE DCV prereq: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-prereq.html
+                # DCV prereq: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-prereq.html
                 yum install -q -y gdm gnome-session gnome-classic-session gnome-session-xsession
                 yum install -q -y xorg-x11-server-Xorg xorg-x11-fonts-Type1 xorg-x11-drivers 
                 yum install -q -y gnome-terminal gnu-free-fonts-common gnu-free-mono-fonts gnu-free-sans-fonts gnu-free-serif-fonts
@@ -558,7 +558,7 @@ Resources:
                 # Disable the Wayland protocol: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-prereq.html#linux-prereq-wayland
                 sed -i '/^\[daemon\]/a WaylandEnable=false' /etc/gdm/custom.conf
 
-                # NICE DCV: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-server.html
+                # DCV: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-server.html
                 rpm --import https://d1uj6qtbmh3dt5.cloudfront.net/NICE-GPG-KEY
                 curl -s -L -O https://d1uj6qtbmh3dt5.cloudfront.net/nice-dcv-el7-$(arch).tgz
                 tar -xvzf nice-dcv-el7-$(arch).tgz && cd nice-dcv-*-el7-$(arch)
@@ -652,7 +652,7 @@ Resources:
           # cfn-init
           $CFN_INIT -v --stack ${AWS::StackName} --resource ec2Instance --region ${AWS::Region} -c setup
 
-          # NICE DCV
+          # DCV
           $CFN_INIT -v --stack ${AWS::StackName} --resource ec2Instance --region ${AWS::Region} -c dcv_install
 
           # Setup former2 
@@ -735,7 +735,7 @@ Outputs:
     Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${ec2Instance}"
 
   DCVwebConsole:
-    Description: NICE DCV browser client (login as ec2-user)
+    Description: DCV browser client (login as ec2-user)
     Value:
       !If [
         displayPublicIP,
