--- a/AmazonLinux2-former2.yaml
+++ b/AmazonLinux2-former2.yaml
@@ -526,6 +526,9 @@ Resources:
                 sysctl -w net.ipv6.conf.default.disable_ipv6=1
 
                 /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ec2Instance --region ${AWS::Region}
+
+                yum update -q -y
+
                 sysctl -w net.ipv6.conf.all.disable_ipv6=0
                 sysctl -w net.ipv6.conf.default.disable_ipv6=0
 
@@ -643,8 +646,12 @@ Resources:
           mkdir -p /tmp/cfn
           cd /tmp/cfn
 
+          # disable IPv6 during setup
+          sysctl -w net.ipv6.conf.all.disable_ipv6=1
+          sysctl -w net.ipv6.conf.default.disable_ipv6=1
+
           yum clean all
-          rm -rf /var/cache/yum
+          yum update -q -y
           yum install -q -y deltarpm wget tmux unzip tar curl sed
 
           export CFN_INIT="/opt/aws/bin/cfn-init"
